--- a/app/views/grant_reviewers/_reviewers.html.haml
+++ b/app/views/grant_reviewers/_reviewers.html.haml
@@ -7,10 +7,9 @@
     - reviewer = grant_reviewer.reviewer
     %tr
       %td.reviewer
-        =# link_to_contact(reviewer).html_safe
         %span.name
-          #{reviewer.first_name} #{reviewer.last_name}
-        %span.remaining-count{title: 'Remaining assignable reviews'}
+          = link_to full_name(reviewer), new_grant_reviewer_review_path(@grant, reviewer), data: { turbo_frame: :modal }
+        %span.remaining-count{ title: 'Remaining assignable reviews' }
           ( #{grant.max_submissions_per_reviewer - reviewer.reviewable_submissions.by_grant(grant).count} )
       %td
         = link_to('Remove', grant_reviewer_path(grant, grant_reviewer), method: :delete,          |
