--- a/app/views/grants/_dates_card.html.haml
+++ b/app/views/grants/_dates_card.html.haml
@@ -11,8 +11,12 @@
         Submission Period:
       %dd
         = submission_period(grant: grant)
-      - if current_user.present?
-        - if grant.panel.start_datetime? && (current_user.get_role_by_grant(grant: grant).present? || grant.reviewers.include?(current_user))
+      - if current_user.present? && (current_user&.get_role_by_grant(grant: grant).present? || grant.reviewers.include?(current_user))
+        %dt
+          Review Period #{grant.accepting_reviews? ? 'Closes' : 'Closed'}:
+        %dd
+          = time_tag(grant.review_close_date, date_mmddyyyy(grant.review_close_date))
+        - if grant.panel.start_datetime?
           %dt
             Panel Start:
           %dd
