Reduce n+1 queries on panel page

--- a/app/views/panels/_panel_schedule_info.html.haml
+++ b/app/views/panels/_panel_schedule_info.html.haml
@@ -17,5 +17,5 @@
       Panel has ended.
     %p
       This panel has ended and is no longer accessible to reviewers.
-  - if user_has_grant_viewer_access
+  - if @user_grant_role
     Reviewers will not see Awarded information.
