--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,6 +6,17 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item.is-active{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.21 (July 3, 2024)
+    .accordion-content{"data-tab-content" => ""}
+      %ul
+        %li
+          Redesign reviewer tab and review assignment process.
+          #{github_issue_link(issue: 486)}
+        %li
+          Assign reviews from the submissions index page.
+        %li
+          Bug fixes, minor improvements.
+  %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.20 (April 19, 2024)
     .accordion-content{"data-tab-content" => ""}
       %ul
