--- a/app/assets/stylesheets/errors.scss
+++ b/app/assets/stylesheets/errors.scss
@@ -1,12 +1,14 @@
+@import 'settings';
+
 .field_with_errors input,
 .field_with_errors select,
 .field_with_errors textarea {
-  border: 0.25em solid red;
+  border: 0.05em solid $input-error-color;
 }
 
 #errorExplanation,
 #error_explanation {
-  border: 3px solid red;
+  border: 3px solid $input-error-color;
   padding: 0.85em;
   padding-bottom: 0;
   margin-bottom: 1em;
